# AnyTool

./: .gitignore  README.md  pyproject.toml  requirements.txt
anytool/: tool_layer.py
anytool/agents/: grounding_agent.py
anytool/config/: config_agents.json  config_grounding.json
anytool/grounding/backends/gui/: tool.py
anytool/grounding/backends/mcp/transport/connectors/: http.py
anytool/grounding/core/: grounding_client.py  search_tools.py
anytool/grounding/core/tool/: base.py
anytool/grounding/core/transport/connectors/: aiohttp_connector.py
anytool/local_server/platform_adapters/: linux_adapter.py
anytool/prompts/: grounding_agent_prompts.py
anytool/recording/: manager.py
